@@ -1,3 +1,5 @@
+* Stop Element#getHeight/Element#getWidth from setting an element's position to "absolute" because it causes shrink-wrapping. [Prototype LH #313] [datamagi, jddalton]
+
 * Remove uneeded $R() and $H() calls so ObjectRange and Hash can be optional. [FuseJS LH #14] [jddalton]
 
 * Change to initial Fuse namespace. [FuseJS LH #1] [jddalton]
